--- a/Hungarian.ipynb
+++ b/Hungarian.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd \n",
-    "import re \n",
+    "# import re \n",
     "import numpy as np\n",
     "import itertools"
    ]
