--- a/Hungarian.ipynb
+++ b/Hungarian.ipynb
@@ -4580,11 +4580,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Link streamlit: [Streamlit](https://pjfd9vmsqejgsfw52hmzm5.streamlit.app/)\n",
+    "<br>\n",
+    "Link github: [Github](https://github.com/Anthopyta/DC/blob/master/Hungarian.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. Kesimpulan\n",
+    "\n",
+    "- Penggunaan Random Over Sampling SMOTE pada model KNN menghasilkan akurasi sebesar 75.4%, sedangkan dengan normalisasi akurasi meningkat menjadi 86.1%.\n",
+    "\n",
+    "- Model Random Forest, setelah berbagai penanganan data, mencapai akurasi sebesar 92% tanpa normalisasi dan 87.7% setelah normalisasi.\n",
+    "\n",
+    "- Model XGBoost menghasilkan akurasi sebesar 90.4% tanpa normalisasi dan tetap 92% setelah normalisasi.\n",
+    "\n",
+    "- Penggunaan tunning parameter dengan RandomSearchCV, normalisasi, dan Random Over Sampling SMOTE pada model KNN menghasilkan akurasi 93%.\n",
+    "\n",
+    "- Model Random Forest mengalami penurunan akurasi yang signifikan menjadi 87.7% setelah tunning parameter dan penanganan data.\n",
+    "\n",
+    "- Model XGBoost tetap stabil dengan akurasi 92% setelah tunning parameter, normalisasi, dan Random Over Sampling SMOTE.\n",
+    "\n",
+    "- Keseluruhan, penanganan ketidakseimbangan data dengan tunning parameter, normalisasi, dan oversampling dapat meningkatkan performa model klasifikasi.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
